--- a/resources/css/overload.css
+++ b/resources/css/overload.css
@@ -148,3 +148,24 @@
     border-width: 3px;
 }
 
+.x-toolbar-dark .x-title {
+    color: #fff;
+    text-shadow: rgba(0,0,0,0.5) 0 -0.08em 3px;
+}
+
+.arrow-right {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid #fed919;
+    float: left;
+    margin: 0 8px 5px 0;
+}
+h1 {
+    font-size: 90%;
+    background-color: white;
+    font-weight: 600;
+    border-bottom: 4px solid #fed919;
+    margin-bottom: 10px;
+}
